upgrade: JDK 17→21, adopt virtual threads (Project Loom)