@@ -55,8 +55,9 @@ public class WorkerConfigNegotiator {
    */
   @PostConstruct
   void syncOnStartup() {
-    Thread waitThread = new Thread(
-      () -> {
+    Thread waitThread = Thread.ofVirtual()
+      .name("config-sync-startup")
+      .unstarted(() -> {
         try {
           boolean received = startupLatch.await(3000, TimeUnit.MILLISECONDS);
           if (!received) {
@@ -65,10 +66,7 @@ public class WorkerConfigNegotiator {
         } catch (InterruptedException e) {
           Thread.currentThread().interrupt();
         }
-      },
-      "config-sync-startup"
-    );
-    waitThread.setDaemon(true);
+      });
     waitThread.start();
   }
 
